lld/test/error-atom-content-byte-value.objtxt
# RUN: not lld-core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that an invalid hex byte produces a readable error.
#

---
atoms:
    - name:         entry
      scope:        hidden
      content:      [ A5, 00, 4G, 1F ]
  
...


# CHECK:       error: Invalid content hex byte
# CHECK:       4G
